--- a/style.css
+++ b/style.css
@@ -1,31 +1,29 @@
 body {
-    display: flex;
-    justify-content: center;
-    background-color: #222222;
-    font-size: 12vh;
-
+  display: flex;
+  justify-content: center;
+  background-color: #222;
+  font-size: 10vh;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #555;
+  height: 100vh;
+  margin: 0;
 }
 
 .wordclock {
-    height: 100%;
-    width: 100vh;
-    display:flex;
-    flex-direction:column;
+  height: 100%;
+  width: 100vh;
+  display:flex;
+  flex-direction:column;
 }
 
 .line {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.number {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #ddd;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .active {
-    font-weight: bolder;
-    color: coral;
+  font-weight: bolder;
+  color: coral;
 }
